# bluetti-venus-gateway

./: .gitignore  AGENTS.md  ChangeLog.md  README.md  pyproject.toml
docs/deploy/: bluetti-venus-gateway-rpi5.md  venus-gateway-rpi5.md
docs/plans/: 20260430-venus-gateway-rpi5.md
docs/plans/completed/: 20260430-venus-gateway-rpi5.md
docs/research/: bluetti-modbus-data-map.md  mqtt-display-parameters.md  telemetry-signal-map.md
docs/validation/: 20260504-local-pre-hardware.md  20260504-raspberry-pi-hardware.md  20260504-victron-model-audit.md
src/bluetti_venus_gateway/: config.py  logging.py
src/bluetti_venus_gateway/bluetti/: auth.py  mqtt_client.py  parser.py  polling.py
src/bluetti_venus_gateway/services/: collector.py  dbus_bridge.py
src/bluetti_venus_gateway/telemetry/: core.py  snapshot_store.py
src/bluetti_venus_gateway/tools/: smoke_test.py  status.py
src/bluetti_venus_gateway/victron/: bridge_model.py  dbus_service.py
tests/: test_auth.py  test_bridge_model.py  test_collector_polling.py  test_config.py  test_dbus_service.py  test_parser.py  test_polling_profile.py  test_snapshot_store.py  test_status.py
venus/: build-offline-bundle.sh  bundle-manifest.template.json  install-venus.sh  logs.sh  repair-if-needed.sh  restart.sh  status.sh  uninstall-venus.sh  update-venus.sh
venus/config/: bluetti-gateway.env.example
venus/lib/: offline-bundle.sh
venus/services/bluetti-collector/: run
venus/services/bluetti-dbus-bridge/: run
venus/services/bluetti-repair-on-boot/: run
